# xjenza-gen

./: .gitignore  Makefile  README.md  article.py  authors.csv  latex.py  main.py  main.tex  prompts.py  pyproject.toml  requirements.txt  run.py  run.sh
.github/workflows/: publish.yml  test.yml
examples/: manual_authors.py
outputs/: main.tex
template/: main.tex
tests/: test_template.py
xjenza_gen/: article.py  latex.py  main.py  prompts.py
xjenza_gen/templates/: main.tex
