[tool.poetry]
name = "xjenza-gen"
version = "0.1.0"
description = ""
authors = ["girogio <giorgiogrigolo03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
latexbuild = { git = "https://github.com/girogio/latexbuild" }
rich = "^13.7.0"
pylatexenc = "^2.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
xjenza-gen = "xjenza_gen.main:app"
